service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc1
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: nginx-blue
  ports:
    - port: 80
      targetPort: 80
