ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - april16-2026.oklabs.in
    secretName: april16-2026-tls
  rules:
  - host: april16-2026.oklabs.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysvc1
            port:
              number: 80
